# exe

ConsolePuppets/: ConsolePuppets.vcxproj
ConsolePuppets/Debug/: CL.read.1.tlog  CL.write.1.tlog  ConsolePuppets.vcxprojResolveAssemblyReference.cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
ConsolePuppets/Release/: CL.read.1.tlog  CL.write.1.tlog  ConsolePuppets.vcxprojResolveAssemblyReference.cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
Recording/: Record.cpp  Recording.vcxproj
Recording/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  (+1 more)
SimpleCLM/: CMakeLists.txt  SimpleCLM.cpp  SimpleCLM.vcxproj
SimpleCLM/Debug/: CL.read.1.tlog  CL.write.1.tlog  SimpleCLM.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
SimpleCLM/Release/: CL.read.1.tlog  CL.write.1.tlog  SimpleCLM.vcxprojResolveAssemblyReference.cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
SimpleCLMImg/: CMakeLists.txt  SimpleCLMImg.cpp  SimpleCLMImg.vcxproj
SimpleHaar/: SimpleHaar.cpp  SimpleHaar.vcxproj  SimpleHaar.vcxproj.filters
SimplePuppets/: SimplePuppets.cpp  SimplePuppets.h  SimplePuppets.vcxproj
(+69 files in other folders)
